@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-09T08:32:18Z",
-  "count_outdated" : 822,
-  "uniques_outdated" : 430,
-  "count" : 839,
+  "timestamp" : "2022-10-09T16:36:30Z",
+  "count_outdated" : 823,
+  "uniques_outdated" : 431,
+  "count" : 840,
   "uniques" : 441,
   "clones" : [
-    {
-      "timestamp": "2022-09-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-26T00:00:00Z",
       "count": 2,
@@ -77,8 +70,8 @@
     },
     {
       "timestamp": "2022-10-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
