@@ -1,3 +1,11 @@
+2022-10-09T16:36:30Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3214819290
+* notice: last 14d: unq all: 2 17
+* notice: prev accum: outdated-unq outdated-all / unq all: 430 822 / 441 839
+* notice: next accum: outdated-unq outdated-all / unq all: 431 823 / 441 840
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-09-25] / [2022-10-09]
+
 2022-10-09T08:32:18Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3213485479
 * notice: last 14d: unq all: 2 17
